# RAG-learn

./: 1-rag_evaluation.ipynb  PageIndex_Vectorless_RAG_CrashCourse (1).ipynb  main.py  pyproject.toml  typesense.ipynb
agenticrag/: 1-agenticrag.ipynb
notebook/: document.ipynb  pdf_loader.ipynb
